* #1137 [Equation] FF3 fixes & improved way of avoiding formula changes in editor  * #1136 FF3 Linux select boxes in toolbar are too small

--- a/Xinha.css
+++ b/Xinha.css
@@ -70,10 +70,9 @@
 .htmlarea .toolbar select,
 .htmlarea .toolbar select:hover,
 .htmlarea .toolbar select:active { 
-  margin-top: 2px;
-  margin-bottom: 1px;
+
   color: ButtonText;
-  height: 17px;
+  height: 22px;
 }
 
 .htmlarea iframe.xinha_iframe, .htmlarea textarea.xinha_textarea
